<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".75">

        <Button
            android:id="@+id/buttonActionBackSpace"
            android:onClick="onClickActionBackSpace"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="40sp"
            android:background="#2f3030"
            android:textColor="#EBEBEB"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editTextCalculatorIO"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:background="#2f3030"
            android:ems="10"
            android:inputType="numberDecimal"
            android:padding="15dp"
            android:textAlignment="textEnd"
            android:textColor="#EBEBEB"
            android:textSize="80sp"
            android:gravity="center_vertical"
            android:focusable="false"
            android:cursorVisible="false"
            android:clickable="false"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight=".25">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <Button
                android:id="@+id/buttonClearSign"
                android:onClick="onClickButtonClearSign"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="40sp"
                android:background="@drawable/button_controls_secondary"
                android:textColor="#EBEBEB"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/buttonActionReverseSign"
                android:onClick="onClickOneInputActionHandler"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="40sp"
                android:background="@drawable/button_controls_secondary"
                android:textColor="#EBEBEB"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/buttonActionSqrt"
                android:onClick="onClickOneInputActionHandler"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="40sp"
                android:background="@drawable/button_controls_secondary"
                android:textColor="#EBEBEB"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/buttonActionDivision"
                android:onClick="onClickActionHandler"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="40sp"
                android:background="@drawable/button_controls_primary"
                android:textColor="#EBEBEB"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <Button
                android:id="@+id/buttonDigit7"
                android:onClick="onClickDigitHandler"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="30sp"
                android:background="@drawable/button_digits"
                android:textColor="#EBEBEB"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/buttonDigit8"
                android:onClick="onClickDigitHandler"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="30sp"
                android:background="@drawable/button_digits"
                android:textColor="#EBEBEB"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/buttonDigit9"
                android:onClick="onClickDigitHandler"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="30sp"
                android:background="@drawable/button_digits"
                android:textColor="#EBEBEB"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/buttonActionMultiplication"
                android:onClick="onClickActionHandler"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="40sp"
                android:background="@drawable/button_controls_primary"
                android:textColor="#EBEBEB"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <Button
                android:id="@+id/buttonDigit4"
                android:onClick="onClickDigitHandler"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="30sp"
                android:background="@drawable/button_digits"
                android:textColor="#EBEBEB"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/buttonDigit5"
                android:onClick="onClickDigitHandler"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="30sp"
                android:background="@drawable/button_digits"
                android:textColor="#EBEBEB"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/buttonDigit6"
                android:onClick="onClickDigitHandler"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="30sp"
                android:background="@drawable/button_digits"
                android:textColor="#EBEBEB"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/buttonActionSubtraction"
                android:onClick="onClickActionHandler"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="40sp"
                android:background="@drawable/button_controls_primary"
                android:textColor="#EBEBEB"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <Button
                android:id="@+id/buttonDigit1"
                android:onClick="onClickDigitHandler"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="30sp"
                android:background="@drawable/button_digits"
                android:textColor="#EBEBEB"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/buttonDigit2"
                android:onClick="onClickDigitHandler"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="30sp"
                android:background="@drawable/button_digits"
                android:textColor="#EBEBEB"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/buttonDigit3"
                android:onClick="onClickDigitHandler"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="30sp"
                android:background="@drawable/button_digits"
                android:textColor="#EBEBEB"
                android:textStyle="bold" />
            <Button
                android:id="@+id/buttonActionAddition"
                android:onClick="onClickActionHandler"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="40sp"
                android:background="@drawable/button_controls_primary"
                android:textColor="#EBEBEB"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <Button
                android:id="@+id/buttonDigit0"
                android:onClick="onClickButton0Handler"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:textSize="30sp"
                android:background="@drawable/button_digits"
                android:textColor="#EBEBEB"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/buttonDigitDot"
                android:onClick="onClickDigitDot"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="30sp"
                android:background="@drawable/button_digits"
                android:textColor="#EBEBEB"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/buttonActionEqual"
                android:onClick="onClickEqualsHandler"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="40sp"
                android:background="@drawable/button_controls_primary"
                android:textColor="#EBEBEB"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>